--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
 
 
 	canvas{
-		border-left: 1px solid #444;
-		border-right: 1px solid #444;
-		border-bottom: 1px solid #444;
+		border: 1px solid #444;
+
+		margin: 0 auto;
 
 		display : block;
-		margin : auto;
 	}
 
 	body {
  		margin: 0;
-		background: #eee;
+		background: #e5e5e5;
 		text-align: center;
 	}
 
@@ -41,14 +40,23 @@
 			background: -webkit-linear-gradient(top,  #3b679e 0%,#2b88d9 50%,#207cca 51%,#7db9e8 100%); /* Chrome10-25,Safari5.1-6 */
 			background: linear-gradient(to bottom,  #3b679e 0%,#2b88d9 50%,#207cca 51%,#7db9e8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 			filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#3b679e', endColorstr='#7db9e8',GradientType=0 ); /* IE6-9 */
-
 			text-align: center;
 	    vertical-align:middle;
 		}
 
 		footer {
+			width: 100%;
+		}
+
+		footer div.credits {
 			font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif;
 			font-size: 10pt;
+			background-color: #e9e9e9;
+			width: 600px;
+			margin: 0 auto;
+			border: 1px solid #aaa;
+			padding: 15px;
+			margin-top: 10px;
 		}
 
 		div.items {
@@ -67,8 +75,8 @@
 		}
 
 		#phaser{
-
-			width: 700px;
+			margin-top: 10px;
+			width: 100%;
 		}
 
 	</style>
@@ -80,13 +88,13 @@
 	<header><img src="assets/images/wizardLogo.png">  <h1 class="Great-Vibes-normal-400">Lost Wizard</h2></header>
 	<div class="items">test</div>
 	<div id="phaser"></div>
-	<footer><hr/>
+	<footer><div class="credits">
 		Lost Wizard game/code is available at GitHub under the
 		<a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a> license.
 		<br/>Music, sound and images are property of their respective owners.
 		<br/>Please see: <a href="">Credits</a> for a list of original content creators.
 		<br/>Lost Wizard was created by X
-	</footer>
+	</div></footer>
 
 	<script src="./app/js/bundle.js"></script>
 </body>
